# test_tasks

./: .gitignore
calculator/: .clang-format  .clang-tidy  CMakeLists.txt
calculator/include/: calculator.hpp  checker.hpp  data.hpp  parser.hpp  printer.hpp  runner.hpp
calculator/src/: calculator.cpp  checker.cpp  main.cpp  parser.cpp  printer.cpp  runner.cpp
media_scanner/: CMakeLists.txt  README.md
media_scanner/src/: main.cpp
pc_resource_monitor/: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
pc_resource_monitor/src/: main.cpp
pc_resource_monitor/web/: app.ts  index.html  styles.css
